<resources>
    <string name="app_name">Sleipnir</string>

    <string name="login_title">Login</string>
    <string name="signup_title">Sign up</string>

    <string name="username_input">User name</string>
    <string name="firstName_input">First name</string>
    <string name="lastName_input">Last name</string>
    <string name="password_input">Password</string>
    <string name="repeatedPassword_input">Repeat password</string>
    <string name="email_input">Email</string>

    <string name="submit_button">Submit</string>
    <string name="signup_label">If not signed up, sign up here</string>
    <string name="signup_button">Sign Up</string>

    <string name="password_error">Passwords do not match</string>
    <string name="telegramUser_error">Incorret telegram user format. Starts with \'@\'</string>

    <string name="title_activity_create_route">Create route</string>
    <string name="title_fragment_show_routes">Future routes planned</string>
    <string name="title_activity_drawer">Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Sleipnir</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="create_route_instrucions">Build the route, then press the button to continue</string>
    <string name="create_rute_button">Proceed</string>


    <string name="detailed_btn">Detailed</string>

    <string name="route_name">Route name</string>
    <string name="x_coord">X coordinate</string>
    <string name="y_coord">Y coordinate</string>
    <string name="max_participants_label">Max number of participants</string>
    <string name="duration_label">Duration (minutes)</string>
    <string name="duration_time_label">Duration</string>
    <string name="date_picker_label">Celebration  (YYYY-MM-DD hh:mm)</string>
    <string name="celebration_label">Celebration date</string>
    <string name="time_picker_label">Celebration time</string>
    <string name="curr_participants_label">Current participants</string>

    <string name="title_activity_join_route">Join route</string>
    <string name="join_button">Join</string>
    <string name="leave_button">Abandon</string>

    <string name="title_fragment_register_route_data">Register route data</string>
    <string name="text_record_name">Record name</string>
    <string name="km_ridden">Distance ridden</string>
    <string name="average_speed">Average speed</string>
    <string name="start_record">Start</string>
    <string name="stop_record">Stop</string>

    <string name="title_show_register">Show register</string>

    <string name="title_activity_detailed_register">Detailed register</string>
    <string name="record_date">Date</string>


    <string name="creator_label">Creator</string>
    <string name="show_chat_button">Access chat</string>
    <string name="you">You</string>
    <string name="message_hint">Write your message...</string>
    <string name="message_send_btn">Send</string>

    <string name="show_observers_title">Show observers</string>
    <string name="observer_hint">New observer user</string>
    <string name="observer_save_btn">Add</string>
    <string name="delete_observer">Delete</string>

    <string name="show_observeds_ubication_title">Show observeds ubication</string>
    <string name="refresh_btn">Refresh</string>

    <string name="my_horses_title">My horses</string>
    <string name="add_horse_btn">Add new horse</string>

    <string name="black_coat">Black</string>
    <string name="brown_coat">Brown</string>
    <string name="sorrel_coat">Sorrel</string>
    <string name="thrush_coat">Thrush</string>
    <string name="appaloosa_coat">Appaloosa</string>
    <string name="overo_coat">Overo</string>
    <string name="roan_coat">Roan</string>
    <string name="bay_coat">Bay</string>
    <string name="white_coat">White</string>
    <string name="elizabethan_coat">Elizabethan</string>

    <string name="stallion">Stallion</string>
    <string name="gelding">Gelding</string>
    <string name="mare">Mare</string>

    <string name="horse_name_hint">Horse name</string>
    <string name="horse_height_hint">Horse height (cm)</string>
    <string name="horse_weight_hint">Horse weight (kg)</string>
    <string name="horse_age_hint">Horse age</string>
    <string name="image_picker_btn">Select image</string>

    <string name="horse_height_label">Height</string>
    <string name="horse_weight_label">Weight</string>
    <string name="horse_age_label">Age</string>
    <string name="horse_coat_label">Coat</string>
    <string name="horse_gender_label">Gender</string>
    <string name="horse_breed_label">Breed</string>

    <string name="owner_label">Owner:</string>
    <string name="show_participants_button">Participants</string>

    <string name="historic_by_distance_title">Past routes by distance</string>
    <string name="distance_picker_hint">Distance in km</string>
    <string name="update">Update</string>

    <string name="title_activity_update_past_route">Update route</string>

    <string name="copy_link">Copy share link</string>
    <string name="link_copied_msg">Link copied to clipboard</string>

    <string name="show_friends_title">My friends</string>
    <string name="friend_hint">New friend</string>

    <string name="friend_routes_title">Routes joined by friends</string>

    <string name="code_hint">Write the route code</string>
    <string name="search_route_btn">Search</string>

    <string name="access_altitude_btn">Access altitude stats</string>

    <string name="altitude_chat_title">Altitude</string>
    <string name="altitude_chat_y">Altitude (m)</string>
    <string name="altitude_chat_x">Distance (m)</string>



    <string name="error_get_horses">Unable to load horses</string>
    <string name="error_update_route">Unable to update route</string>
    <string name="error_signup">Error signing up</string>
    <string name="error_get_participants">Unable to load participants</string>
    <string name="error_get_horse_image">Unable to load image</string>
    <string name="error_post_message">Unable to post message</string>
    <string name="error_get_messages">Unable to load messages</string>
    <string name="error_login">Error loging in</string>
    <string name="error_detailed_route">Unable to load detailed route</string>
    <string name="error_has_joined">Error obtaining join status</string>
    <string name="error_leaving_route">Unable to leave route</string>
    <string name="error_joining_route">Unable to join route</string>
    <string name="error_create_route">Unable to create route</string>
    <string name="error_detailed_record">Unable to load detailed record</string>
    <string name="error_add_horse">Unable to add horse</string>
    <string name="error_get_routes">Unable to load routes</string>
    <string name="error_get_records">Unable to load records</string>
    <string name="error_modify_location">Unable to modify last location</string>
    <string name="error_register_data">Unable to register route data</string>
    <string name="error_add_observer">Unable to add observer</string>
    <string name="error_get_observers">Unable to load observers</string>
    <string name="error_get_past_routes">Unable to load past routes</string>
    <string name="error_get_friend_routes">Unable to load friend routes</string>
    <string name="error_add_friend">Unable to add friend</string>
    <string name="error_get_friends">Unable to load friends</string>
    <string name="error_get_observeds">Unable to load observeds</string>

</resources>