<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_show_routes"
            android:title="@string/title_fragment_show_routes" />

        <item
            android:id="@+id/nav_create_route"
            android:title="@string/title_activity_create_route" />

        <item
            android:id="@+id/nav_register_route_data"
            android:title="@string/title_fragment_register_route_data" />

        <item
            android:id="@+id/nav_show_register"
            android:title="@string/title_show_register" />

        <item
            android:id="@+id/nav_show_observers"
            android:title="@string/show_observers_title" />

    </group>
</menu>