<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    android:backgroundTint="@color/secondary"
    app:startDestination="@+id/nav_show_routes">

    <fragment
        android:id="@+id/nav_show_routes"
        android:name="com.android.sleipnir.ui.show_routes.ShowRoutes"
        android:label="@string/title_fragment_show_routes"
        tools:layout="@layout/fragment_show_routes" />

    <fragment
        android:id="@+id/nav_create_route"
        android:name="com.android.sleipnir.ui.create_route.CreateRoute"
        android:label="@string/title_activity_create_route"
        tools:layout="@layout/fragment_create_route" />

    <fragment
        android:id="@+id/nav_register_route_data"
        android:name="com.android.sleipnir.ui.register_route_data.RegisterRouteData"
        android:label="@string/title_fragment_register_route_data"
        tools:layout="@layout/fragment_register_route_data" />

    <fragment
        android:id="@+id/nav_show_register"
        android:name="com.android.sleipnir.ui.show_register.ShowRegister"
        android:label="@string/title_show_register"
        tools:layout="@layout/fragment_show_register" />

    <fragment
        android:id="@+id/nav_show_observers"
        android:name="com.android.sleipnir.ui.observer.ShowObserversFragment"
        android:label="@string/show_observers_title"
        tools:layout="@layout/fragment_show_observers" />

    <fragment
        android:id="@+id/nav_show_observeds_ubication"
        android:name="com.android.sleipnir.ui.check_observeds.ShowObserversUbicationFragment"
        android:label="@string/show_observeds_ubication_title"
        tools:layout="@layout/fragment_show_observers_ubication" />

    <fragment
        android:id="@+id/nav_show_horses"
        android:name="com.android.sleipnir.ui.horse.ShowHorsesFragment"
        android:label="@string/my_horses_title"
        tools:layout="@layout/fragment_show_horses" />

    <fragment
        android:id="@+id/nav_historic_by_distance"
        android:name="com.android.sleipnir.ui.historic.HistoricByDistanceFragment"
        android:label="@string/historic_by_distance_title"
        tools:layout="@layout/fragment_historic_by_distance" />

    <fragment
        android:id="@+id/nav_show_friends"
        android:name="com.android.sleipnir.ui.friend.ShowFriendsFragment"
        android:label="@string/show_friends_title"
        tools:layout="@layout/fragment_show_friends" />

    <fragment
        android:id="@+id/nav_friend_routes"
        android:name="com.android.sleipnir.ui.friend.FriendsRoutesFragment"
        android:label="@string/friend_routes_title"
        tools:layout="@layout/fragment_friends_routes" />

</navigation>