<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/secondary"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/ll_main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="@color/secondary"
        android:padding="25dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/loginTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            android:text="@string/login_title"
            android:textColor="@color/textColor"
            android:gravity="center"
            android:layout_marginBottom="18dp" />


        <EditText
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/username_input"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password_input"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/backColor"
            android:text="@string/submit_button"
            android:textColor="@color/textColor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="3dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/signupLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:labelFor="@id/SignupButton"
                android:text="@string/signup_label"
                android:textColor="@color/textColor" />

            <Button
                android:id="@+id/SignupButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:backgroundTint="@color/backColor"
                android:text="@string/signup_button"
                android:textColor="@color/textColor" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>