<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20sp"
    android:background="@color/secondary"
    tools:context=".FillRouteInfoActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/route_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/route_name"
                android:textColor="@color/textColor" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/x_coord"
                    android:textColor="@color/textColor"
                    android:textSize="8sp" />

                <TextView
                    android:id="@+id/x_cord"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5sp"
                    android:layout_marginEnd="10sp"
                    android:textColor="@color/textColor"
                    android:textSize="8sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/y_coord"
                    android:textColor="@color/textColor"
                    android:textSize="8sp" />

                <TextView
                    android:id="@+id/y_cord"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5sp"
                    android:textColor="@color/textColor"
                    android:textSize="8sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/max_participants"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColor"
                    android:hint="@string/max_participants_label"
                    android:inputType="number" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="time"
                    android:textColor="@color/textColor"
                    android:hint="@string/duration_label"/>

            </androidx.appcompat.widget.LinearLayoutCompat>


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:orientation="vertical">


                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">


                    <EditText
                        android:id="@+id/date_picker"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/date_picker_label"
                        android:inputType="datetime"
                        android:textColor="@color/textColor" />
                </androidx.appcompat.widget.LinearLayoutCompat>




            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:orientation="vertical">


                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">


                    <Spinner
                        android:id="@+id/horse_picker"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp"
                        android:minWidth="300dp"
                        android:textColor="@color/textColor" />
                </androidx.appcompat.widget.LinearLayoutCompat>




            </androidx.appcompat.widget.LinearLayoutCompat>

            <Button
                android:id="@+id/submit_route_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit_button"
                android:textColor="@color/textColor" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>