<?xml version="1.0" encoding="utf-8"?>

<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/secondary"
    android:orientation="vertical"
    android:weightSum="10"
    android:gravity="center"
    tools:context=".ui.register_route_data.RegisterRouteData" >

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6" />



    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:padding="7dp"
        android:background="@color/secondary" >

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/secondary"
            android:orientation="vertical"
            android:padding="12dp"
            android:gravity="center">

            <EditText
                android:id="@+id/record_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textColor"
                android:textSize="25sp"
                android:inputType="text"
                android:hint="@string/text_record_name" />


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="5dp"
                android:gravity="start">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="5dp"
                    android:gravity="start">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5sp"
                        android:textColor="@color/textColor"
                        android:text="@string/km_ridden"/>
                    <TextView
                        android:id="@+id/km_ridden"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/textColor" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="5dp"
                    android:gravity="start">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5sp"
                        android:textColor="@color/textColor"
                        android:text="@string/average_speed"/>
                    <TextView
                        android:id="@+id/average_speed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/textColor" />
                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>


            <Chronometer
                android:id="@+id/total_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textColor" />


            <Button
                android:id="@+id/record_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:background="@color/primary"
                android:textColor="@color/textColor"
                android:text="@string/start_record" />


        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>



</androidx.appcompat.widget.LinearLayoutCompat>